add month and week1 column

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@ article {
     padding: 1em;
     overflow: hidden;
 }
+tr {
+	text-align: center; 
+}
+
 </style>
 </head>
 <body>
@@ -44,22 +48,73 @@ article {
 <div class="container">
 
 <header>
-   <h1>Your Team Name</h1>
+   <h1>Creativity Time!</h1>
 </header>
   
 <nav>
   <ul>
-    <li><a href="#">Team #1</a></li>
-    <li><a href="#">Team #2</a></li>
-    <li><a href="#">Team #3</a></li>
-    <li><a href="#">Team #4</a></li>
+    <li><a href="#">Meydita Cahyani</a></li>
+    <li><a href="#">Adiiba Dwikanthi</a></li>
+    <li><a href="#">Rivaldi Pratama</a></li>
+    <li><a href="#">Janah Purwanti</a></li>
   </ul>
 </nav>
 
 <article>
-  <h1>Your team name</h1>
-  <p>Our team is ...(Story about your team)</p>
-  <p>Our vision is ...</p>
+<table border="1">
+	<tr >
+		<td>Month</td>
+		<td bgcolor= #80ff80>Week 1</td>
+	</tr>
+    <tr >
+        <td rowspan="3"> 1 </td>
+        <td bgcolor="silver"> 3 Mile run</td>
+    </tr>
+    <tr> 
+        <td> 2 mile walk, then</td>
+    </tr>
+	 <tr >
+        <td> 1 mile run/walk </td>
+    </tr>
+	
+	<tr>
+        <td rowspan="3"> 2 </td>
+        <td bgcolor="silver"> 6.5 mile run</td>
+    </tr>
+    <tr> 
+        <td> 3 mile walk, then</td>
+    </tr>
+	 <tr >
+        <td> 3.5 mile run/walk </td>
+    </tr>
+	
+	<tr>
+        <td rowspan="3" align="center"> 3 </td>
+        <td bgcolor="silver"> 9.5 mile run</td>
+    </tr>
+    <tr> 
+        <td> 3 mile walk, then</td>
+    </tr>
+	 <tr >
+        <td> 6.5 mile run/walk </td>
+    </tr>
+	
+	<tr>
+        <td rowspan="3" align="center"> 4 </td>
+        <td bgcolor="silver"> 12.5 mile run</td>
+    </tr>
+    <tr> 
+        <td> 3 mile walk, then</td>
+    </tr>
+	 <tr >
+        <td> 9.5 mile run/walk </td>
+    </tr>
+	
+	<tr>
+        <td align="center"> 5 </td> 
+        <td> half marathon</td>
+    </tr>
+</table>
 </article>
 
 <footer>Copyright &copy; Your team</footer>
