perubahan pada kolom 3

--- a/index.html
+++ b/index.html
@@ -66,18 +66,22 @@ tr {
 		<td>Month</td>
 		<td bgcolor= #80ff80>Week 1</td>
 		<td bgcolor= #80ff80>Week 2</td>
+		<td bgcolor= #80ff80>Week 3</td>
 	</tr>
     <tr >
         <td rowspan="3"> 1 </td>
         <td bgcolor="silver"> 3 Mile run</td>
         <td bgcolor="silver"> 4 Mile run</td>
+		<td bgcolor="silver"> 5 Mile run</td>
     </tr>
     <tr> 
         <td> 2 mile walk, then</td>
 		<td> 2 mile walk, then</td>
+		<td> 3 mile walk, then</td>
     </tr>
 	 <tr >
         <td> 1 mile run/walk </td>
+		<td> 2 mile run/walk </td>
 		<td> 2 mile run/walk </td>
     </tr>
 	
@@ -85,40 +89,49 @@ tr {
         <td rowspan="3"> 2 </td>
         <td bgcolor="silver"> 6.5 mile run</td>
         <td bgcolor="silver"> 3 mile run</td>
+		<td bgcolor="silver"> 8 mile run</td>
     </tr>
     <tr> 
         <td> 3 mile walk, then</td>
+		<td> 3 mile walk, then</td>
 		
     </tr>
 	 <tr >
         <td> 3.5 mile run/walk </td>
 		<td> 3 mile run/walk </td>
+		<td> 5 mile run/walk </td>
     </tr>
 	
 	<tr>
         <td rowspan="3" align="center"> 3 </td>
         <td bgcolor="silver"> 9.5 mile run</td>
 		<td > 4 mile run</td>
+		<td bgcolor="silver"> 11 mile run</td>
     </tr>
     <tr> 
         <td > 4 mile walk, then</td>
+		<td > 3 mile walk, then</td>
     </tr>
 	 <tr >
         <td> 6.5 mile run/walk </td>
 		<td> 4 mile walk, then</td>
+		<td> 8 mile walk, then</td>
     </tr>
 	
 	<tr>
         <td rowspan="3" align="center"> 4 </td>
         <td bgcolor="silver"> 12.5 mile run</td>
 		<td bgcolor="silver"> 4 mile run</td>
+		<td bgcolor="silver"> 14 mile run</td>
     </tr>
     <tr> 
         <td> 3 mile walk, then</td>
+		<td> 3 mile walk, then</td>
     </tr>
 	 <tr >
         <td> 9.5 mile run/walk </td>
 		<td > 4 mile run/walk</td>
+		<td > 11 mile run/walk</td>
     </tr>
 	
 	<tr>
