perubahan di klom 4

--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@ tr {
 		<td bgcolor= #80ff80>Week 1</td>
 		<td bgcolor= #80ff80>Week 2</td>
 		<td bgcolor= #80ff80>Week 3</td>
+		<td bgcolor= #80ff80>Week 4</td>
 	</tr>
     <tr >
         <td rowspan="3"> 1 </td>
         <td bgcolor="silver"> 3 Mile run</td>
         <td bgcolor="silver"> 4 Mile run</td>
 		<td bgcolor="silver"> 5 Mile run</td>
+		<td bgcolor="silver"> 2.5 Mile run</td>
     </tr>
     <tr> 
         <td> 2 mile walk, then</td>
@@ -83,6 +85,8 @@ tr {
         <td> 1 mile run/walk </td>
 		<td> 2 mile run/walk </td>
 		<td> 2 mile run/walk </td>
+		<td> 2.5 mile run/walk </td>
+		
     </tr>
 	
 	<tr>
@@ -90,6 +94,8 @@ tr {
         <td bgcolor="silver"> 6.5 mile run</td>
         <td bgcolor="silver"> 3 mile run</td>
 		<td bgcolor="silver"> 8 mile run</td>
+		<td bgcolor="silver"> 3 mile run</td>
+		
     </tr>
     <tr> 
         <td> 3 mile walk, then</td>
@@ -100,6 +106,7 @@ tr {
         <td> 3.5 mile run/walk </td>
 		<td> 3 mile run/walk </td>
 		<td> 5 mile run/walk </td>
+		<td> 3 mile run/walk </td>
     </tr>
 	
 	<tr>
@@ -107,6 +114,8 @@ tr {
         <td bgcolor="silver"> 9.5 mile run</td>
 		<td > 4 mile run</td>
 		<td bgcolor="silver"> 11 mile run</td>
+		<td bgcolor="silver"> 4 mile run</td>
+		
     </tr>
     <tr> 
         <td > 4 mile walk, then</td>
@@ -116,6 +125,8 @@ tr {
         <td> 6.5 mile run/walk </td>
 		<td> 4 mile walk, then</td>
 		<td> 8 mile walk, then</td>
+		<td> 4 mile walk, then</td>
+		
     </tr>
 	
 	<tr>
@@ -123,6 +134,8 @@ tr {
         <td bgcolor="silver"> 12.5 mile run</td>
 		<td bgcolor="silver"> 4 mile run</td>
 		<td bgcolor="silver"> 14 mile run</td>
+		<td bgcolor="silver"> 5 mile run</td>
+		
     </tr>
     <tr> 
         <td> 3 mile walk, then</td>
@@ -132,6 +145,8 @@ tr {
         <td> 9.5 mile run/walk </td>
 		<td > 4 mile run/walk</td>
 		<td > 11 mile run/walk</td>
+		<td > 5 mile run/walk</td>
+		
     </tr>
 	
 	<tr>
